@@ -35,6 +35,9 @@
 // users homedirectory)
 #define ACCOUNTING_PATH	".kde/share/apps/kppp/"
 
+// file used for PAP authetication purposes
+#define PAP_AUTH_FILE ".kde/share/apps/kppp/.pap-auth"
+
 // Define the default modem response timeout
 #define MODEM_TIMEOUT "60"
 
