@@ -5,6 +5,7 @@
  *                      wuebben@math.cornell.edu
  * 
  * This file was contributed by Mario Weilguni <mweilguni@sime.com>
+ * Thanks Mario!
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
