@@ -7,6 +7,7 @@
  *                      wuebben@math.cornell.edu
  *
  * This file was contributed by Mario Weilguni <mweilguni@sime.com>
+ * Thanks Mario!
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -29,12 +30,15 @@
 
 #include <sys/types.h>
 #include <signal.h>
+#include "config.h"
 
 #define AUTH_SCRIPT     0
 #define AUTH_PAP        1
 
 // file used for PAP authetication purposes
-#define PAP_AUTH_FILE ".kde/share/apps/kppp/.pap-auth"
+// moved to config.h -- Bernd
+
+// #define PAP_AUTH_FILE ".kde/share/apps/kppp/.pap-auth"
 
 bool PAP_UsePAP();
 bool PAP_CreateAuthFile();
